experiment/openrouter-run/stage3-rac/zero_shot/compile_logs/ContainsDuplicate.log
warning: [options] system modules path not set in conjunction with -source 11
/Users/tiancheng/Documents/Software Validation/verification-project/experiment/openrouter-run/stage3-jml/zero_shot/ContainsDuplicate/ContainsDuplicate.java:15: error: cannot find symbol
        Arrays.sort(nums);
        ^
  symbol:   variable Arrays
  location: class ContainsDuplicate
1 error
1 warning
